<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:layout_marginStart="14dp"
    android:layout_marginEnd="14dp">

    <TextView
        android:id="@+id/price_chart_txt"
        style="@style/CoinBitText.Huge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price_chart_updown"
        style="@style/CoinBitText.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"
        android:paddingEnd="4dp"
        android:textColor="@color/tertiaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_chart_txt" />

    <TextView
        android:id="@+id/chart_change_1"
        style="@style/CoinBitText.BodyTertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/price_chart_updown"
        app:layout_constraintStart_toEndOf="@+id/price_chart_updown"
        app:layout_constraintTop_toBottomOf="@+id/price_chart_txt" />

    <TextView
        android:id="@+id/chart_change_2"
        style="@style/CoinBitText.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:textColor="@color/tertiaryTextColor"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/chart_change_1"
        app:layout_constraintTop_toTopOf="@+id/chart_change_1" />

    <com.robinhood.spark.SparkView
        app:spark_lineWidth = "4dp"
        app:spark_lineColor = "@color/colorPrimary"
        android:id="@+id/sparkView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart_change_1"
        app:spark_animateChanges="true"
        app:spark_scrubEnabled="true" />

    <TextView
        android:id="@+id/chart_error"
        style="@style/CoinBitText.Body1Alternate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Some Error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/sparkView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sparkView" />

    <RadioGroup
        android:id="@+id/radioGroupMain"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sparkView">

        <RadioButton
            android:id="@+id/radio_12h"

            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1h"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />
        <RadioButton
            android:id="@+id/radio_1Day"

            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1day"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />
        <RadioButton
            android:id="@+id/radio_1w"

            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1week"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />
        <RadioButton
            android:id="@+id/radio_1M"

            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1month"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_3M"

            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_3month"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />
        <RadioButton
            android:id="@+id/radio_1Y"

            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1year"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />
        <RadioButton
            android:id="@+id/radio_all"

            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_all"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14sp"
            android:textStyle="bold" />



    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>